tests/cases/fail/for_tuple_target_shape.p4
def main() -> None:
    values: list[int] = [1, 2]
    for (a, b) in values:
        print(a)
